@@ -1,3 +1,6 @@
+* Fix for invalid RtConfig output on Cisco when specifying family.
+  Thanks to Daryl Collins for the report and to S.P.Zeidler for 
+  the fix.
 * Cache file support when "irrd" protocol is used. Thanks to
   Hagen Boehm for the implementation.
 * Build fixes for OS X.
